style(article-stylesheets): modernize CSS by removing deprecated selectors and fixing contrast
- Replace deprecated `font[color]` selector with `[color]`
- Remove deprecated `acronym` selector (use `abbr` instead)
- Fix text contrast issue in sound icon button (`.dsl_s_wav a`)
- Replace deprecated `word-break: break-word` with `overflow-wrap: break-word`

--- a/src/stylesheets/article-style-st-classic.css
+++ b/src/stylesheets/article-style-st-classic.css
@@ -412,7 +412,7 @@ div.xdxf {
 .dsl_opt,
 .dsl_opt .dsl_ex,
 .dsl_opt .dsl_ex :not(a),
-.dsl_opt .dsl_ex font[color] /* DSL Feature: Enforce the optional zone color even if the children tags say otherwise */ {
+.dsl_opt .dsl_ex [color] /* DSL Feature: Enforce the optional zone color even if the children tags say otherwise */ {
   color: gray;
 }
 
@@ -1218,7 +1218,6 @@ div.xdxf {
   vertical-align: top;
 }
 .mwiki abbr,
-.mwiki acronym,
 .mwiki .explain {
   border-bottom: 1px dotted black;
   color: black;
